...
                    endPoint: .bottomTrailing
                  ),
                  lineWidth: 1.5
                )
            )
          }
          .accessibilityIdentifier("ForYouButton")
          .fixedSize()
        }
      }
      .padding(.horizontal, 16)
      .padding(.vertical, 12)
    }
...
